2010-05-11  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (to-list): Added an implementation that will
	transform vectors into lists.

	* generics.lisp: Created a generic method that will transform
	objects into lists.

	* translation.lisp: Added a file for managing translation
	matrices.

	* scale.lisp (create-scale-matrix): Created a method to create
	non-uniform scales.
	(create-uniform-scale-matrix): Returns a matrix that performs
	uniform scaling.

	* matrix.lisp (make-diagonal): A function that returns diagonal
	matrices.

	* scale.lisp: Added a new file to manage scale matrices.

2010-04-13  Rudy Neeser  <rudy.neeser@gmail.com>

	* operations.lisp (create-vector-operation-method): Updated so
	that vector operations are performed using loops. 

2010-04-12  Rudy Neeser  <rudy.neeser@gmail.com>

	* matrix.lisp (zerop): Returns T iff all members of the matrix are
	EQUIVALENT to zero.

	* vector.lisp (vector=): Performed some optimisations to make
	vector comparision quicker.
	(zerop): Added a method to test VECTORs and LISTs to see if all
	their components are zero.

2010-04-06  Rudy Neeser  <rudy.neeser@gmail.com>

	* random.lisp (uniform): Added a method to create uniformly
	distributed values.

2010-03-06  Rudy Neeser  <rudy.neeser@gmail.com>

	* random.lisp (noise3): Fixed a bug: added absolute values to the
	interpolation sub-function. Also, changed the use of TRUNCATE to
	FLOOR to properly allow for negative values.

2010-03-05  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector-operations.lisp (centre-of-mass): Added a generic
	function to calculate the average of a group of points.

2010-02-27  Rudy Neeser  <rudy.neeser@gmail.com>

	* random.lisp (noise3): Updated to test the given argument to
	ensure that it is a 3-vector.

	* tests.lisp (etest-needed-vector-dimension): A helper macro for
	testing required dimension sizes.
	(test-dimensions): Added two methods that will test a lm:vector
	and list to ensure that they have the required dimension.
